Add new label entries to all translation files. For Spanish ones we go for AAAA in the YYYY field. Everywhere else we leave the same YYYY in place

--- a/ddp-workspace/projects/basil-app/src/assets/i18n/fr.json
+++ b/ddp-workspace/projects/basil-app/src/assets/i18n/fr.json
@@ -73,6 +73,11 @@
           "November": "novembre",
           "December": "décembre"
         },
+        "DateLabel": {
+            "YYYY": "YYYY",
+            "MM": "MM",
+            "DD": "DD"
+        },
         "UserMenu": {
             "DashboardButton": "Dashboard",
             "SignOutButton": "Sign Out"
