--- a/ddp-workspace/projects/ddp-atcp/src/assets/i18n/de.json
+++ b/ddp-workspace/projects/ddp-atcp/src/assets/i18n/de.json
@@ -354,6 +354,11 @@
       "September": "September",
       "Year": "Jahr wählen ..."
     },
+    "DateLabel": {
+      "YYYY": "YYYY",
+      "MM": "MM",
+      "DD": "DD"
+    },
     "DetailsPlaceholder": {
       "PluralForm": "Zeichen verbleibend",
       "SingularForm": "Zeichen verbleibend"
