--- a/ddp-workspace/projects/ddp-atcp/src/assets/i18n/es.json
+++ b/ddp-workspace/projects/ddp-atcp/src/assets/i18n/es.json
@@ -354,6 +354,11 @@
       "September": "Septiembre",
       "Year": "Seleccione el año..."
     },
+    "DateLabel": {
+      "YYYY": "AAAA",
+      "MM": "MM",
+      "DD": "DD"
+    },
     "DetailsPlaceholder": {
       "PluralForm": "caracteres restantes",
       "SingularForm": "carácter restante"
