--- a/ddp-workspace/projects/ddp-atcp/src/assets/i18n/hi.json
+++ b/ddp-workspace/projects/ddp-atcp/src/assets/i18n/hi.json
@@ -364,6 +364,11 @@
       "September": "सितंबर",
       "Year": "वर्ष चुनें..."
     },
+    "DateLabel": {
+      "YYYY": "YYYY",
+      "MM": "MM",
+      "DD": "DD"
+    },
     "DetailsPlaceholder": {
       "PluralForm": "बाकी बचे वर्ण",
       "SingularForm": "बाकी बचा वर्ण"
