--- a/ddp-workspace/projects/ddp-prion/src/assets/i18n/es.json
+++ b/ddp-workspace/projects/ddp-prion/src/assets/i18n/es.json
@@ -679,6 +679,11 @@
       "November": "noviembre",
       "December": "diciembre"
     },
+    "DateLabel": {
+      "YYYY": "AAAA",
+      "MM": "MM",
+      "DD": "DD"
+    },
     "UserMenu": {
       "DashboardButton": "Mi panel",
       "SignOutButton": "Cerrar sesión"
