--- a/ddp-workspace/projects/ddp-rgp/src/assets/i18n/es.json
+++ b/ddp-workspace/projects/ddp-rgp/src/assets/i18n/es.json
@@ -1213,6 +1213,11 @@
             "November": "[es]November",
             "December": "[es]December"
         },
+        "DateLabel": {
+            "YYYY": "AAAA",
+            "MM": "MM",
+            "DD": "DD"
+        },
         "UserMenu": {
             "DashboardButton": "[es]Dashboard",
             "SignOutButton": "[es]Sign Out"
