--- a/ddp-workspace/projects/ddp-testboston/src/assets/i18n/fr.json
+++ b/ddp-workspace/projects/ddp-testboston/src/assets/i18n/fr.json
@@ -494,6 +494,11 @@
       "November": "Novembre",
       "December": "Décembre"
     },
+    "DateLabel": {
+      "YYYY": "YYYY",
+      "MM": "MM",
+      "DD": "DD"
+    },
     "UserMenu": {
       "DashboardButton": "Tableau de bord",
       "SignOutButton": "Déconnexion"
