--- a/ddp-workspace/projects/ddp-testboston/src/assets/i18n/pt.json
+++ b/ddp-workspace/projects/ddp-testboston/src/assets/i18n/pt.json
@@ -494,6 +494,11 @@
       "November": "Novembro",
       "December": "Dezembro"
     },
+    "DateLabel": {
+      "YYYY": "YYYY",
+      "MM": "MM",
+      "DD": "DD"
+    },
     "UserMenu": {
       "DashboardButton": "Painel",
       "SignOutButton": "Encerrar sessão"
