--- a/ddp-workspace/projects/ddp-testboston/src/assets/i18n/ru.json
+++ b/ddp-workspace/projects/ddp-testboston/src/assets/i18n/ru.json
@@ -494,6 +494,11 @@
       "November": "Ноябрь",
       "December": "Декабрь"
     },
+    "DateLabel": {
+      "YYYY": "YYYY",
+      "MM": "MM",
+      "DD": "DD"
+    },
     "UserMenu": {
       "DashboardButton": "Контрольная панель",
       "SignOutButton": "Выйти из системы"
