--- a/ddp-workspace/projects/ddp-testboston/src/assets/i18n/ar.json
+++ b/ddp-workspace/projects/ddp-testboston/src/assets/i18n/ar.json
@@ -494,6 +494,11 @@
       "November": "نوفمبر",
       "December": "ديسمبر"
     },
+    "DateLabel": {
+      "YYYY": "YYYY",
+      "MM": "MM",
+      "DD": "DD"
+    },
     "UserMenu": {
       "DashboardButton": "لوحة المعلومات",
       "SignOutButton": "تسجيل الخروج"
