--- a/ddp-workspace/projects/ddp-testboston/src/assets/i18n/vi.json
+++ b/ddp-workspace/projects/ddp-testboston/src/assets/i18n/vi.json
@@ -494,6 +494,11 @@
       "November": "Tháng Mười Một",
       "December": "Tháng Mười Hai"
     },
+    "DateLabel": {
+      "YYYY": "YYYY",
+      "MM": "MM",
+      "DD": "DD"
+    },
     "UserMenu": {
       "DashboardButton": "Bảng điều khiển",
       "SignOutButton": "Thoát ra"
