--- a/ddp-workspace/projects/ddp-testboston/src/assets/i18n/zh.json
+++ b/ddp-workspace/projects/ddp-testboston/src/assets/i18n/zh.json
@@ -494,6 +494,11 @@
       "November": "十一月",
       "December": "十二月"
     },
+    "DateLabel": {
+      "YYYY": "YYYY",
+      "MM": "MM",
+      "DD": "DD"
+    },
     "UserMenu": {
       "DashboardButton": "控制面板",
       "SignOutButton": "签退"
