--- a/ddp-workspace/projects/sandbox-app/src/assets/i18n/fr.json
+++ b/ddp-workspace/projects/sandbox-app/src/assets/i18n/fr.json
@@ -73,6 +73,11 @@
           "November": "novembre",
           "December": "décembre"
         },
+        "DateLabel": {
+            "YYYY": "YYYY",
+            "MM": "MM",
+            "DD": "DD"
+        },
         "UserMenu": {
             "DashboardButton": "Dashboard",
             "SignOutButton": "Sign Out"
