update ru.json with Russian labels for date

--- a/ddp-workspace/projects/ddp-atcp/src/assets/i18n/ru.json
+++ b/ddp-workspace/projects/ddp-atcp/src/assets/i18n/ru.json
@@ -355,9 +355,9 @@
       "Year": "Выбрать год..."
     },
     "DateLabel": {
-      "YYYY": "YYYY",
+      "YYYY": "ГГГГ",
       "MM": "MM",
-      "DD": "DD"
+      "DD": "ДД"
     },
     "DetailsPlaceholder": {
       "PluralForm": "символов осталось",
