Ddp 6013 internationalize date label (#529)
* Add new label entries to all translation files. For Spanish ones we go for AAAA in the YYYY field. We also are updating Russian label thanks to local expertise. Everywhere else labels remain the same as before.

--- a/ddp-workspace/projects/ddp-atcp/src/assets/i18n/ru.json
+++ b/ddp-workspace/projects/ddp-atcp/src/assets/i18n/ru.json
@@ -354,6 +354,11 @@
       "September": "Сентябрь",
       "Year": "Выбрать год..."
     },
+    "DateLabel": {
+      "YYYY": "ГГГГ",
+      "MM": "MM",
+      "DD": "ДД"
+    },
     "DetailsPlaceholder": {
       "PluralForm": "символов осталось",
       "SingularForm": "символ остался"
