--- a/ddp-workspace/projects/ddp-cgc/src/assets/i18n/en.json
+++ b/ddp-workspace/projects/ddp-cgc/src/assets/i18n/en.json
@@ -99,5 +99,17 @@
       }
     ],
     "Info": "Please contact us at <b>cancergenomecollective@broadinstitute.org</b> or <b>651-229-5806</b> with any questions, comments, or suggestions."
+  },
+  "StayInformed": {
+    "Title": "Thank you for your interest!",
+    "Paragraph1": "Unfortunately, at this time, all of the statements on the previous page must be true to participate.",
+    "Paragraph2": "Please join our mailing list to be informed about the project and any updates on future participation.",
+    "Form": {
+      "Email": {
+        "Label": "Email Account*",
+        "Error": "Please enter a valid Email Account"
+      },
+      "Submit": "I want to stay informed"
+    }
   }
 }
