CGC: Add "Password" page

--- a/ddp-workspace/projects/ddp-cgc/src/assets/i18n/en.json
+++ b/ddp-workspace/projects/ddp-cgc/src/assets/i18n/en.json
@@ -111,5 +111,14 @@
       },
       "Submit": "I want to stay informed"
     }
+  },
+  "PasswordPage": {
+    "Form": {
+      "Password": {
+        "Label": "Please enter your password",
+        "Required": "Please enter your password",
+        "Invalid": "Incorrect password. Please try again."
+      }
+    }
   }
 }
