--- a/ddp-workspace/projects/ddp-rgp/src/assets/i18n/es.json
+++ b/ddp-workspace/projects/ddp-rgp/src/assets/i18n/es.json
@@ -1052,6 +1052,10 @@
     },
     "DashboardPage": {
         "Title": "[es]My Dashboard",
+        "Info": {
+          "Paragraph1": "[es]Thank you for your interest in the Rare Genomes Project. This page will provide you information about the steps regarding your involvement with the study.",
+          "Paragraph2": "[es]If you have questions, browse our Frequently Asked Questions page or contact the study staff at <a href=\"tel:617-714-7395\">617-714-7395</a> or <a href=\"mailto:raregenomes@broadinstitute.org\">raregenomes@broadinstitute.org</a>."
+        },
         "StudyMessages": {
           "Title": "[es]Study Messages",
           "Header": {
