MBC es translation

--- a/ddp-workspace/projects/ddp-mbc/src/assets/i18n/es.json
+++ b/ddp-workspace/projects/ddp-mbc/src/assets/i18n/es.json
@@ -581,6 +581,11 @@
             "November": "noviembre",
             "December": "diciembre"
         },
+        "DateLabel": {
+          "YYYY": "AAAA",
+          "MM": "MM",
+          "DD": "DD"
+        },
         "UserMenu": {
             "DashboardButton": "Tablero de Progreso",
             "SignOutButton": "Cerrar Sesión"
