Angular side fixes for DDP-6044

--- a/ddp-workspace/projects/ddp-rarex/src/assets/i18n/en.json
+++ b/ddp-workspace/projects/ddp-rarex/src/assets/i18n/en.json
@@ -14,7 +14,7 @@
   "Footer": {
     "Links": {
       "Home": "RARE-X.org",
-      "TermsAndConditions": "Terms and Conditions",
+      "TermsOfUse": "Terms of Use",
       "PrivacyPolicy": "Privacy Policy"
     }
   },
