Rare-X | DDP-6057: Fix error message for incorrect dates

--- a/ddp-workspace/projects/ddp-rarex/src/assets/i18n/en.json
+++ b/ddp-workspace/projects/ddp-rarex/src/assets/i18n/en.json
@@ -404,6 +404,9 @@
       "PluralForm": "characters remaining",
       "SingularForm": "character remaining"
     },
+    "Validators": {
+      "DateNavyValidationRule": "Please check the date"
+    },
     "MailAddress": {
       "Fields": {
         "Name": "Full Name",
