Rare-X | DDP-6083: Add page count in consent / assent

--- a/ddp-workspace/projects/ddp-rarex/src/assets/i18n/en.json
+++ b/ddp-workspace/projects/ddp-rarex/src/assets/i18n/en.json
@@ -4,7 +4,8 @@
       "CREATED": "New",
       "IN_PROGRESS": "In Progress",
       "COMPLETE": "Complete"
-    }
+    },
+    "PageCount": "Page {{ current }} of {{ total }}"
   },
   "Header": {
     "Alts": {
