Rare-X | DDP-6084: Rephrase dashboard & participants list titles

--- a/ddp-workspace/projects/ddp-rarex/src/assets/i18n/en.json
+++ b/ddp-workspace/projects/ddp-rarex/src/assets/i18n/en.json
@@ -309,10 +309,10 @@
     }
   },
   "Dashboard": {
-    "Title": "My Dashboard"
+    "Title": "Dashboard"
   },
   "ParticipantsList": {
-    "Title": "Your Participants",
+    "Title": "Participant Dashboard",
     "NewParticipant": "New Participant",
     "NoParticipants": "You don't have any participants at this moment. You can add one by clicking the button below."
   },
