Rare-X | DDP-6101: Add banner with logout reminder

--- a/ddp-workspace/projects/ddp-rarex/src/assets/i18n/en.json
+++ b/ddp-workspace/projects/ddp-rarex/src/assets/i18n/en.json
@@ -350,7 +350,8 @@
     },
     "Navigation": {
       "Dashboard": "Dashboard"
-    }
+    },
+    "LogoutReminder": "Please log out after completing your session."
   },
   "SDK": {
     "DatePicker": {
