Apply missed translations for InstitutionsForm (for other studies)

--- a/ddp-workspace/projects/ddp-prion/src/assets/i18n/es.json
+++ b/ddp-workspace/projects/ddp-prion/src/assets/i18n/es.json
@@ -707,6 +707,10 @@
         "City": "Ciudad",
         "State": "Estado"
       },
+      "Form" : {
+        "OtherPhysician": "Otro doctor",
+        "OtherInstitution": "Otra institución"
+      },
       "PhysicianValidation": "Complete todos los campos obligatorios"
     },
     "MailAddress": {
