--- a/ddp-workspace/projects/ddp-rgp/src/assets/i18n/es.json
+++ b/ddp-workspace/projects/ddp-rgp/src/assets/i18n/es.json
@@ -1241,6 +1241,10 @@
                 "City": "[es]City",
                 "State": "[es]State"
             },
+            "Form" : {
+                "OtherPhysician": "Otro doctor",
+                "OtherInstitution": "Otra institución"
+            },
             "PhysicianValidation": "[es]Please fill out all required fields"
         },
         "Validators": {
