--- a/ddp-workspace/projects/ddp-testboston/src/assets/i18n/pt.json
+++ b/ddp-workspace/projects/ddp-testboston/src/assets/i18n/pt.json
@@ -522,6 +522,10 @@
         "City": "Cidade",
         "State": "Estado"
       },
+      "Form" : {
+        "OtherPhysician": "Outro médico",
+        "OtherInstitution": "Outra instituição"
+      },
       "PhysicianValidation": "Preencha todos os campos obrigatórios"
     },
     "MailAddress": {
