--- a/ddp-workspace/projects/ddp-osteo/src/assets/i18n/en.json
+++ b/ddp-workspace/projects/ddp-osteo/src/assets/i18n/en.json
@@ -649,6 +649,10 @@
                 "City": "City",
                 "State": "State"
             },
+            "Form" : {
+                "OtherPhysician": "Other physician",
+                "OtherInstitution": "Other institution"
+            },
             "PhysicianValidation": "Please fill out all required fields"
         },
         "MailAddress": {
