--- a/ddp-workspace/projects/ddp-prion/src/assets/i18n/he.json
+++ b/ddp-workspace/projects/ddp-prion/src/assets/i18n/he.json
@@ -707,6 +707,10 @@
         "City": "עיר",
         "State": "מדינה"
       },
+      "Form" : {
+        "OtherPhysician": "Other physician",
+        "OtherInstitution": "Other institution"
+      },
       "PhysicianValidation": "מלאו את כל השדות הנדרשים"
     },
     "MailAddress": {
