--- a/ddp-workspace/projects/ddp-rgp/src/assets/i18n/en.json
+++ b/ddp-workspace/projects/ddp-rgp/src/assets/i18n/en.json
@@ -1236,6 +1236,10 @@
                 "City": "City",
                 "State": "State"
             },
+            "Form" : {
+                "OtherPhysician": "Other physician",
+                "OtherInstitution": "Other institution"
+            },
             "PhysicianValidation": "Please fill out all required fields"
         },
         "Validators": {
