--- a/ddp-workspace/projects/ddp-testboston/src/assets/i18n/es.json
+++ b/ddp-workspace/projects/ddp-testboston/src/assets/i18n/es.json
@@ -522,6 +522,10 @@
         "City": "Ciudad",
         "State": "Estado"
       },
+      "Form" : {
+        "OtherPhysician": "Otro doctor",
+        "OtherInstitution": "Otra institución"
+      },
       "PhysicianValidation": "Complete todos los campos obligatorios."
     },
     "MailAddress": {
