--- a/ddp-workspace/projects/ddp-testboston/src/assets/i18n/fr.json
+++ b/ddp-workspace/projects/ddp-testboston/src/assets/i18n/fr.json
@@ -522,6 +522,10 @@
         "City": "Ville ",
         "State": "État"
       },
+      "Form" : {
+        "OtherPhysician": "Autre médecin",
+        "OtherInstitution": "Autre institution"
+      },
       "PhysicianValidation": "Veuillez renseigner tous les champs requis"
     },
     "MailAddress": {
