--- a/ddp-workspace/projects/ddp-rarex/src/assets/i18n/en.json
+++ b/ddp-workspace/projects/ddp-rarex/src/assets/i18n/en.json
@@ -4,7 +4,8 @@
       "CREATED": "New",
       "IN_PROGRESS": "In Progress",
       "COMPLETE": "Complete"
-    }
+    },
+    "PageCount": "Page {{ current }} of {{ total }}"
   },
   "Header": {
     "Alts": {
@@ -308,10 +309,10 @@
     }
   },
   "Dashboard": {
-    "Title": "My Dashboard"
+    "Title": "Dashboard"
   },
   "ParticipantsList": {
-    "Title": "Your Participants",
+    "Title": "Participant Dashboard",
     "NewParticipant": "New Participant",
     "NoParticipants": "You don't have any participants at this moment. You can add one by clicking the button below."
   },
@@ -349,7 +350,8 @@
     },
     "Navigation": {
       "Dashboard": "Dashboard"
-    }
+    },
+    "LogoutReminder": "Please log out after completing your session."
   },
   "SDK": {
     "DatePicker": {
@@ -403,6 +405,9 @@
     "DetailsPlaceholder": {
       "PluralForm": "characters remaining",
       "SingularForm": "character remaining"
+    },
+    "Validators": {
+      "DateNavyValidationRule": "Please check the date"
     },
     "MailAddress": {
       "Fields": {
